Add bootstrap, add styles

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,9 +16,11 @@
       <tr>
         <td><%= event.name %></td>
         <td><%= event.event_time %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td><%= link_to 'Show', event, class: "btn btn-info" %></td>
+        <td><%= link_to 'Edit', edit_event_path(event), class: "btn btn-outline-warning" %></td>
+        <td><%= link_to 'Destroy', event, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
       </tr>
     <% end %>
   </tbody>
