--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main role="main" class="container">
+      <%= yield %>
+    </main>
   </body>
 </html>
