Fix form for ticket

--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -3,7 +3,7 @@
 
   <%= form.input :price %>
 
-  <%= form.association :events %>
+  <%= form.association :event %>
 
   <div class="actions">
     <%= form.submit %>
