--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= link_to 'Events', events_path %>
+    <%= link_to 'Tickets', tickets_path %>
+
     <main role="main" class="container">
       <%= yield %>
     </main>
