--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -5,6 +5,8 @@
 <table>
   <thead>
     <tr>
+      <th>Event</th>
+      <th>Time</th>
       <th>Price</th>
       <th colspan="3"></th>
     </tr>
@@ -13,12 +15,14 @@
   <tbody>
     <% @tickets.each do |ticket| %>
       <tr>
+        <td><%= ticket.event.name %></td>
+        <td><%= ticket.event.event_time %></td>
         <td><%= ticket.price %></td>
 
         <td><%= link_to 'Show', ticket, class: "btn btn-info" %></td>
         <td><%= link_to 'Edit', edit_ticket_path(ticket), class: "btn btn-outline-warning" %></td>
         <td><%= link_to 'Destroy', ticket, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        
+
       </tr>
     <% end %>
   </tbody>
