--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,6 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Event:</strong>
+  <%= @ticket.event.name %>
+</p>
+
+<p>
+  <strong>Time:</strong>
+  <%= @ticket.event.event_time %>
+</p>
+
+<p>
   <strong>Price:</strong>
   <%= @ticket.price %>
 </p>
