Add registration and login links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= render 'devise/menu/registration_items' %>
+    <%= render 'devise/menu/login_items' %>
+
     <%= link_to 'Events', events_path %>
     <%= link_to 'Tickets', tickets_path %>
 
