--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Event time</th>
+      <th>Available tickets</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,11 +17,12 @@
       <tr>
         <td><%= event.name %></td>
         <td><%= event.event_time %></td>
+        <td><%= event.tickets.count %></td>
 
         <td><%= link_to 'Show', event, class: "btn btn-info" %></td>
         <td><%= link_to 'Edit', edit_event_path(event), class: "btn btn-outline-warning" %></td>
         <td><%= link_to 'Destroy', event, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        
+
       </tr>
     <% end %>
   </tbody>
