--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,7 +14,7 @@
   <strong>Tickets to purchase [EUR]:</strong>
   <% @event.tickets.map do |ticket| %>
     <br>
-    <%= ticket.price %> <%= link_to 'Buy', ticket, class: "btn btn-info" %>
+    <%= ticket.price %> <%= link_to 'Proceed to buy', ticket, class: "btn btn-info" %>
   <% end %>
 </p>
 
